[package]
name = "wasm-lib"
description = "Interoperability with JS via WebAssembly from Rust code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# Rust <--> JS interop
wasm-bindgen = "0.2.89"

